--- a/DreamFunction/CMakeLists.txt
+++ b/DreamFunction/CMakeLists.txt
@@ -97,5 +97,8 @@ target_link_libraries(executePurityDream DreamFunctions)
 add_executable(executeDPhiDEtaBBar ${PROJECT_SOURCE_DIR}/Scripts/ExecuteDPhiDEtaBBar.C)
 target_link_libraries(executeDPhiDEtaBBar DreamFunctions)
 
+add_executable(executePhi ${PROJECT_SOURCE_DIR}/Scripts/ExecutePhi.C)
+target_link_libraries(executePhi DreamFunctions)
+
 add_executable(executePXi ${PROJECT_SOURCE_DIR}/Scripts/GetpXiVariations.C)
 target_link_libraries(executePXi DreamFunctions)
