--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -129,4 +129,7 @@ target_link_libraries(TestCats tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 add_executable(LambdaPars ${PROJECT_SOURCE_DIR}/Scripts/LambdaPars.C)
 target_link_libraries(LambdaPars tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
+add_executable(SourceMtMaker ${PROJECT_SOURCE_DIR}/Scripts/SourceMtMaker.C)
+target_link_libraries(SourceMtMaker tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
 add_subdirectory(Test)
