Add skeleton for Phi QA

--- a/ForgivingQA/CMakeLists.txt
+++ b/ForgivingQA/CMakeLists.txt
@@ -43,6 +43,9 @@ target_link_libraries(ForgivingFnct ${ROOT_LIBRARIES})
 add_executable(timeForQA ${PROJECT_SOURCE_DIR}/Scripts/MakeQA.C)
 target_link_libraries(timeForQA ForgivingFnct)
 
+add_executable(phiQA ${PROJECT_SOURCE_DIR}/Scripts/MakePhiQA.C)
+target_link_libraries(phiQA ForgivingFnct)
+
 add_executable(timeForPeriodQA ${PROJECT_SOURCE_DIR}/Scripts/PerEventQA.C)
 target_link_libraries(timeForPeriodQA ForgivingFnct)
 
