Add plotting script for pp

--- a/DreamFunction/CMakeLists.txt
+++ b/DreamFunction/CMakeLists.txt
@@ -61,6 +61,9 @@ target_link_libraries(executePlot DreamFunctions)
 add_executable(executePlotSigma ${PROJECT_SOURCE_DIR}/Scripts/executePlotSigma.C)
 target_link_libraries(executePlotSigma DreamFunctions)
 
+add_executable(executePlotProton ${PROJECT_SOURCE_DIR}/Scripts/executePlotProton.C)
+target_link_libraries(executePlotProton DreamFunctions)
+
 add_executable(executeSigma ${PROJECT_SOURCE_DIR}/Scripts/ExecuteSigma.C)
 target_link_libraries(executeSigma DreamFunctions)
 
