Cherry-pick:Adding all macros for running fit systematics BBar

--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -169,14 +169,25 @@ target_link_libraries(mTPLAnalysis tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
 add_executable(runPhi ${PROJECT_SOURCE_DIR}/Scripts/pPhi.C)
 target_link_libraries(runPhi tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
- 
+
 add_executable(radPlotter ${PROJECT_SOURCE_DIR}/Scripts/RadiusDrawer.C)
 target_link_libraries(radPlotter tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
- 
+
 add_executable(radPlotterV2 ${PROJECT_SOURCE_DIR}/Scripts/RadiusDrawerPotSep.C)
 target_link_libraries(radPlotterV2 tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
- 
+
 add_executable(lambdaPlotter ${PROJECT_SOURCE_DIR}/Scripts/ppAnalysis/LambdaExtractor.C)
 target_link_libraries(lambdaPlotter tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
- 
+
+add_subdirectory(Scripts/BBarAnalysis)
+
+add_executable(SysVarExtractor ${PROJECT_SOURCE_DIR}/Scripts/BBarAnalysis/SysVarExtractor.C)
+target_link_libraries(SysVarExtractor tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
+add_executable(SysVarExtractorpAL ${PROJECT_SOURCE_DIR}/Scripts/BBarAnalysis/SysVarExtractorpAL.C)
+target_link_libraries(SysVarExtractorpAL tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
+add_executable(SysVarExtractorLAL ${PROJECT_SOURCE_DIR}/Scripts/BBarAnalysis/SysVarExtractorLAL.C)
+target_link_libraries(SysVarExtractorLAL tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
 add_subdirectory(Test)
