--- a/DreamFunction/CMakeLists.txt
+++ b/DreamFunction/CMakeLists.txt
@@ -76,6 +76,9 @@ target_link_libraries(executeDPhiDEtaAtRad DreamFunctions)
 add_executable(executeHEP ${PROJECT_SOURCE_DIR}/Scripts/ConvertToHEP.C)
 target_link_libraries(executeHEP DreamFunctions)
 
+add_executable(executeSigmaHEP ${PROJECT_SOURCE_DIR}/Scripts/ConvertSigmaToHEP.C)
+target_link_libraries(executeSigmaHEP DreamFunctions)
+
 add_executable(executeOneFile ${PROJECT_SOURCE_DIR}/Scripts/MakeOneFile.C)
 target_link_libraries(executeOneFile DreamFunctions)
 
