adds the momentumgami to all CMakeLists.txt

--- a/DreamFunction/CMakeLists.txt
+++ b/DreamFunction/CMakeLists.txt
@@ -15,6 +15,17 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${binFolder}/DreamFunctions)
 include_directories(${CMAKE_SOURCE_DIR} ${PROJECT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src ${ROOT_INCLUDE_DIRS})
 add_definitions(${ROOT_CXX_FLAGS})
 
+SET(KITTY_PATH "${CMAKE_SOURCE_DIR}/GentleKitty")#where are all CATS related .h files
+SET(FORGIVEN_PATH "${CMAKE_SOURCE_DIR}/ForgivingQA")#where are all CATS related .h files
+SET(GAMI_PATH "${CMAKE_SOURCE_DIR}/FemtoGami")#where are all CATS related .h files
+SET(SYSTEMATIC_PATH "${CMAKE_SOURCE_DIR}/Systematics")#where are all CATS related .h files
+include_directories(${KITTY_PATH})
+include_directories(${FORGIVEN_PATH})
+include_directories(${GAMI_PATH})
+include_directories(${SYSTEMATIC_PATH})
+include_directories(${CATS_INCLUDE})
+include_directories(${PROJECT_SOURCE_DIR})
+
 set(SRCS
   ${PROJECT_SOURCE_DIR}/DreamCF.cxx
   ${PROJECT_SOURCE_DIR}/DreamData.cxx
@@ -44,7 +55,7 @@ set(HEADERS
   )
 add_library(DreamFunctions STATIC ${SRCS})
 set_target_properties(DreamFunctions PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
-target_link_libraries(DreamFunctions ${ROOT_LIBRARIES})
+target_link_libraries(DreamFunctions ${ROOT_LIBRARIES} femtoGami)
 
 add_executable(executeDream ${PROJECT_SOURCE_DIR}/Scripts/ExecuteCFDream.C)
 target_link_libraries(executeDream DreamFunctions)
