Demonstrate the effect of the coupled channels on the p-Sigma0 correlation function

--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -120,6 +120,9 @@ target_link_libraries(PlotSigmaModels tidyCATS -L${DREAM_LIB_PATH} DreamFunction
 add_executable(PlotSigmaSmear ${PROJECT_SOURCE_DIR}/Scripts/pSigma0Analysis/pSigma0smear.C)
 target_link_libraries(PlotSigmaSmear tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
+add_executable(PlotSigmaCoupled ${PROJECT_SOURCE_DIR}/Scripts/pSigma0Analysis/pSigma0coupled.C)
+target_link_libraries(PlotSigmaCoupled tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
 add_executable(sigmaModels ${PROJECT_SOURCE_DIR}/Scripts/pSigma0Analysis/drawSigmaModelPlot.C)
 target_link_libraries(sigmaModels tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
