adds name to the femtogami library so it is complied properly

--- a/FemtoGami/CMakeLists.txt
+++ b/FemtoGami/CMakeLists.txt
@@ -47,7 +47,7 @@ set(HEADERS
   )
   
 add_library(femtoGami STATIC ${SRCS})
-set_target_properties(  PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
+set_target_properties(femtoGami PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 target_link_libraries(femtoGami tidyCATS DreamFunctions ForgivingFnct)
 
 add_executable(XiGami ${PROJECT_SOURCE_DIR}/Scripts/XiGami.C)
