Adding macros for mT analysis in p-antiL and l_antiL

--- a/Systematics/CMakeLists.txt
+++ b/Systematics/CMakeLists.txt
@@ -62,3 +62,6 @@ target_link_libraries(systematicspAL tidyCATS DreamFunctions ForgivingFnct)
 
 add_executable(pALmTVariations ${PROJECT_SOURCE_DIR}/GetmTVariationspAL.C)
 target_link_libraries(pALmTVariations tidyCATS DreamFunctions ForgivingFnct)
+
+add_executable(LALmTVariations ${PROJECT_SOURCE_DIR}/GetmTVariationsLAL.C)
+target_link_libraries(LALmTVariations tidyCATS DreamFunctions ForgivingFnct)
