--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -58,6 +58,7 @@ set(SRCS
   ${PROJECT_SOURCE_DIR}/TidyCats.cxx
   ${PROJECT_SOURCE_DIR}/CATSInput.cxx
   ${PROJECT_SOURCE_DIR}/CATSInputSigma0.cxx
+  ${PROJECT_SOURCE_DIR}/CATSInputPhi.cxx
   ${PROJECT_SOURCE_DIR}/CATSLambdaParam.cxx
   ${PROJECT_SOURCE_DIR}/PlayWithCats.cxx
   ${PROJECT_SOURCE_DIR}/SideBandFit.cxx
@@ -73,6 +74,7 @@ set(HEADERS
   ${PROJECT_SOURCE_DIR}/TidyCats.h
   ${PROJECT_SOURCE_DIR}/CATSInput.h
   ${PROJECT_SOURCE_DIR}/CATSInputSigma0.h
+  ${PROJECT_SOURCE_DIR}/CATSInputPhi.h
   ${PROJECT_SOURCE_DIR}/CATSLambdaParam.h
   ${PROJECT_SOURCE_DIR}/PlayWithCats.h
   ${PROJECT_SOURCE_DIR}/SideBandFit.h
