Draw the p-Sigma0 source and compare to p-p

--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -130,6 +130,9 @@ target_link_libraries(pSigma0 tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 add_executable(PlotSigmaModels ${PROJECT_SOURCE_DIR}/Scripts/pSigma0Analysis/plotSigmaModels.C)
 target_link_libraries(PlotSigmaModels tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
+add_executable(SigmaSource ${PROJECT_SOURCE_DIR}/Scripts/pSigma0Analysis/FemtoSource.C)
+target_link_libraries(SigmaSource tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
 add_executable(SigmaRadiusCF ${PROJECT_SOURCE_DIR}/Scripts/pSigma0Analysis/radiusCF.C)
 target_link_libraries(SigmaRadiusCF tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
